--- a/backend/chat-backend/package.json
+++ b/backend/chat-backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mongoose": "^8.13.2",
     "openpgp": "^6.1.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
